--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.7.9",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2"
   },
